--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -447,7 +447,14 @@
     box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
     text-align: right;
     font-size: 12px;
-    color: rgb(67, 111, 206);
+    color: #0E70F2;
+}
+.form-control.input_Info{
+    border: none;
+    box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
+    text-align: right;
+    font-size: 12px;
+    color: #0E70F2;
 }
 
 #comment {
@@ -1045,11 +1052,14 @@ position: relative;
         text-align: center;
     }
     .modal-body.modal_body_css{
-    overflow: auto;
-    }
+        overflow-y: scroll;
+        scrollbar-width: none;
+        scrollbar-height: none;
+        -ms-overflow-style: none;
+        }
     .modal-footer.ModaldShowDetail{
         height: 30px;
-        overflow: auto;
+        /* overflow: auto; */
         background-color:#1558DB;
         border-bottom-left-radius: 25px;
         border-bottom-right-radius: 25px;
