--- a/resources/css/assignments.css
+++ b/resources/css/assignments.css
@@ -1,4 +1,4 @@
-#btn-groups-assigne {
+.btn.btn_groups_assigne {
     font-size: 12px;
     font-weight: normal;
     padding-left: 5px;
@@ -8,33 +8,33 @@
     box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
 }
 @media screen and (max-width:995px) {
-    #btn-groups-assigne {
+    .btn.btn_groups_assigne {
         margin-left: 40%;
     }
 }
 @media screen and (max-width:777px) {
-    #btn-groups-assigne {
+    .btn.btn_groups_assigne {
         margin-left: 28%;
     }
 }
 
 @media screen and (max-width:700px) {
-    #btn-groups-assigne {
+    .btn.btn_groups_assigne {
         margin-left: 50%;
         position: fixed;
     }
 }
 
 @media screen and (max-width:550px) {
-    #btn-groups-assigne {
-        width: 100px;
+    .btn.btn_groups_assigne {
+        /* width: 100px; */
         margin-top: -25px;
         font-size: 10px;
         background-color: #ffffff;
     }
 }
 @media screen and (max-width:350px) {
-    #btn-groups-assigne {
+    .btn.btn_groups_assigne {
         margin-left: 35%;
     }
 }
@@ -44,7 +44,7 @@
     margin-left: 14px;
 }
 
-#btn-addHW {
+.btn.btn_addHW {
     font-size: 12px;
     font-weight: normal;
     padding-left: 5px;
@@ -55,17 +55,17 @@
 }
 
 @media screen and (max-width:650px) {
-    #btn-addHW {
+    .btn.btn_addHW {
         margin-left: 14%;
     }
 }
 @media screen and (max-width:777px) {
-    #btn-addHW {
+    .btn.btn_addHW {
         margin-top: -28px;
     }
 }
 @media screen and (max-width:550px) {
-    #btn-addHW {
+    .btn.btn_addHW {
         margin-left: 20%;
         margin-top: -25px;
         font-size: 10px;
@@ -73,13 +73,21 @@
     }
 }
 @media screen and (max-width:350px) {
-    #btn-addHW {
+    .btn.btn_addHW {
         margin-top: 19px;
         margin-left: 1px;
         left: 1px;
     }
 }
-
+.picture_add{
+    width: 20px;
+    float: left;
+}
+@media screen and (max-width:300px) {
+    .picture_add {
+        display: none;
+    }
+}
 .hr3 {
     background-color: #ffffff;
     border: none;
@@ -101,8 +109,8 @@
     height: 33px;
     box-shadow: 1px rgb(72, 72, 72);
 }
-/* 
-#input-group-assign {
+/*
+.input-group.input_group_assign {
     width: 300px;
     margin-left: 450px;
     height: 30px;
@@ -110,31 +118,31 @@
     position: fixed;
 } */
 /* @media screen and (max-width: 1000px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 300px;
     }
 }
 
 @media screen and (max-width: 890px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 270px;
     }
 }
 
 @media screen and (max-width: 840px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 200px;
     }
 }
 
 @media screen and (max-width: 740px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 180px;
     }
 }
 
 @media screen and (max-width: 550px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         width: 230px;
         margin-top: 1px;
         margin-left: 140px;
@@ -152,7 +160,7 @@
 }
 
 @media screen and (max-width: 425px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         width: 200px;
         margin-top: 1px;
         margin-left: 100px;
@@ -160,14 +168,14 @@
 }
 
 @media screen and (max-width: 370px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         width: 180px;
         margin-top: 1px;
         margin-left: 100px;
     }
 } */
 
-#input-group-assign {
+.input-group.input_group_assign {
     width: 300px;
     margin-left: 450px;
     height: 30px;
@@ -175,112 +183,112 @@
     position: fixed;
 }
 @media screen and (max-width: 1270px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 400px;
     }
 }
 @media screen and (max-width: 1150px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 360px;
     }
 }
 @media screen and (max-width: 1040px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 340px;
     }
 }
 @media screen and (max-width: 992px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 300px;
     }
 }
 
 @media screen and (max-width: 950px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 260px;
         width: 250px;
         position: fixed;
     }
 }
 @media screen and (max-width: 900px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 230px;
     }
 }
 @media screen and (max-width: 828px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 190px;
         width: 220px;
     }
 }
 @media screen and (max-width: 745px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 160px;
     }
 }
 @media screen and (max-width: 700px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 260px;
     }
 }
 @media screen and (max-width: 650px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 220px;
     }
 }
 @media screen and (max-width: 640px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 200px;
     }
 }
 @media screen and (max-width: 600px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 180px;
     }
 }
 @media screen and (max-width: 580px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 170px;
         width: 200px;
     }
 }
 @media screen and (max-width: 550px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-top: 3px;
         margin-left: 170px;
     }
 }
 @media screen and (max-width: 480px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 140px;
     }
 }
 @media screen and (max-width: 425px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 130px;
         width: 180px;
     }
 }
 @media screen and (max-width: 380px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 100px;
         width: 180px;
     }
 }
 @media screen and (max-width: 350px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         margin-left: 90px;
         width: 180px;
     }
 }
 @media screen and (max-width: 330px) {
-    #input-group-assign {
+    .input-group.input_group_assign {
         width: 160px;
     }
 }
 @media screen and (max-width: 300px) {
-    #input-group-assign {
-        margin-left: 85px;
+    .input-group.input_group_assign {
+        margin-left: 70px;
         width: 150px;
     }
 }
@@ -428,7 +436,7 @@
             margin-right: 200px;
         }
     }
-    
+
     @media screen and (max-width:360px) {
         #btnsave {
             margin-right: 170px;
@@ -499,7 +507,7 @@
     float: left;
 }
 
-#btn-recive-hw {
+.btn.btn_recive_hw {
     margin-top: 5px;
     font-size: 13px;
     font-weight: normal;
@@ -510,10 +518,10 @@
 } */
 
 
-/* 
+/*
 
 @media screen and (max-width:530px) {
-    #btn-recive-hw {
+    .btn.btn_recive_hw {
         margin-top: 145px;
         display: inline;
         width: 70px;
@@ -523,7 +531,7 @@
 }
 
 @media screen and (max-width:530px) {
-    #btn-recive-edte-hw {
+    .btn.btn_recive_edte_hw {
         margin-top: 145px;
         display: inline;
         width: 70px;
@@ -532,16 +540,18 @@
     }
 } */
 
-#table-details-assignements-teacher {
+.table_details_assignements_teacher {
     width: 60%;
     /* margin-left: 6%; */
     margin-top: -10px;
     font-size: 14px;
     float: right;
+    color:#0E70F2;
+
 }
-/* 
+/*
 @media screen and (max-width:992px) {
-#table-details-assignements-teacher {
+.table_details_assignements_teacher {
 width: 70%;
 margin-top: -10px;
 font-size: 14px;
@@ -550,21 +560,22 @@ float: right;
 } */
 
 @media screen and (max-width:550px) {
-    #table-details-assignements-teacher {
-        width: 40%;
+    .table_details_assignements_teacher {
+        width: 50%;
         margin-top: -10px;
         font-size: 12px;
-        margin-left: 40%;
+        margin-left: 30%;
         text-align: right;
-        position: fixed;
+        position: absolute;
     }
 }
 
 @media screen and (max-width:480px) {
-    #table-details-assignements-teacher {
+    .table_details_assignements_teacher {
         width: 100%;
         margin-top: 0px;
-        margin-left: -100px;
+        /* margin-left: -80px; */
+        right: 1%;
         font-size: 12px;
         text-align: none;
         float: right;
@@ -572,25 +583,33 @@ float: right;
         position: absolute;
     }
 }
+@media screen and (max-width:400px) {
+    .table_details_assignements_teacher {
+        width: 95%;
+    }
+}
 
-#text-table-assigne-teacher {
+
+.text_table_assigne_teacher {
     float: right;
 }
 
 @media screen and (max-width:480px) {
-    #text-table-assigne-teacher {
+    .text_table_assigne_teacher {
         float: none;
-        width: 40%;
+        /* width: 20%; */
         text-align: right;
+
+
     }
 }
 
-#table-header-assigne-teacher {
+.table_header_assigne_teacher {
     width: 150px;
 }
 
 @media screen and (max-width:480px) {
-    #table-header-assigne-teacher {
+    .table_header_assigne_teacher {
         width: 25%;
     }
 }
@@ -599,17 +618,18 @@ float: right;
     float: left;
 }
 
-#btn-recive-hw {
+.btn.btn_recive_hw {
     margin-top: 5px;
     font-size: 13px;
     font-weight: normal;
+    /* width: 10%; */
     width: 90px;
     height: 33px;
     display: block;
     z-index: 3;
 }
 
-#btn-recive-edte-hw {
+.btn.btn_recive_edte_hw {
     background-color: #ffffff;
     box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
     color: #0E70F2;
@@ -622,19 +642,20 @@ float: right;
     margin-top: 5px;
     font-size: 13px;
     font-weight: normal;
-    width: 90px;
+    /* width: 10%; */
+        width: 90px;
     height: 33px;
     display: block;
     z-index: 3;
 }
 
 @media screen and (max-width:800px) {
-    #btn-recive-hw {
+    .btn.btn_recive_hw {
         width: 80px;
         font-size: 12px;
         height: 30px;
     }
-    #btn-recive-edte-hw {
+    .btn.btn_recive_edte_hw {
         width: 80px;
         font-size: 12px;
         height: 30px;
@@ -642,7 +663,7 @@ float: right;
 }
 
 /* @media screen and (max-width:800px) {
-    #btn-recive-edte-hw {
+    .btn.btn_recive_edte_hw {
         width: 80px;
         font-size: 12px;
         height: 30px;
@@ -650,7 +671,7 @@ float: right;
 } */
 
 @media screen and (max-width:480px) {
-    #btn-recive-hw {
+    .btn.btn_recive_hw {
         margin-top: 145px;
         display: inline;
         width: 67px;
@@ -658,7 +679,7 @@ float: right;
         height: 30px;
         margin-left: 7px;
     }
-    #btn-recive-edte-hw {
+    .btn.btn_recive_edte_hw {
         margin-top: 145px;
         display: inline;
         width: 67px;
@@ -669,7 +690,7 @@ float: right;
 }
 
 /* @media screen and (max-width:480px) {
-    #btn-recive-edte-hw {
+    .btn.btn_recive_edte_hw {
         margin-top: 145px;
         display: inline;
         width: 70px;
@@ -678,15 +699,33 @@ float: right;
     }
 } */
 @media screen and (max-width:300px) {
-    #btn-recive-hw {
-        width: 57px;
-        font-size: 10px;
-        margin-left: 5px;
-    }
-    #btn-recive-edte-hw {
+    .btn.btn_recive_hw {
         width: 60px;
-        font-size: 10px;
-        margin-left: 5px;
+        font-size: 11px;
+        left: 5px;
+    }
+    .btn.btn_recive_edte_hw {
+        /* width: 60px; */
+        font-size: 11px;
+        left: 5px;
+    }
+}
+@media screen and (max-width:280px) {
+    .btn.btn_recive_hw {
+        width: 50px;
+        left: 0%;
+    }
+    .btn.btn_recive_edte_hw {
+        left: 0%;
+    }
+}
+@media screen and (max-width:270px) {
+    .btn.btn_recive_hw {
+        /* width: 50px; */
+        margin-left: 0px;
+    }
+    .btn.btn_recive_edte_hw {
+        margin-left: 0px;
     }
 }
 
@@ -947,7 +986,7 @@ float: right;
             z-index: 2;
         }
     }
-    
+
     @media (max-width: 550px) {
         #btn-assignementsStudentsdropdown-HW {
             margin-left: 26%;
@@ -1293,7 +1332,7 @@ float: right;
         text-align: right;
     }
 }
-#card-done-assignments{    
+#card-done-assignments{
     width: 70%;
     height: 100%;
     margin-top: 20px;
@@ -1306,29 +1345,29 @@ float: right;
     /* margin-bottom: 20px; */
 }
 @media screen and (max-width:992px) {
-    #card-done-assignments{    
+    #card-done-assignments{
         width: 80%;
     }
 }
 @media screen and (max-width:850px) {
-    #card-done-assignments{    
+    #card-done-assignments{
         width: 85%;
         margin-left:1%;
     }
 }
 @media screen and (max-width:768px) {
-    #card-done-assignments{    
+    #card-done-assignments{
         width: 94%;
     }
 }
 @media screen and (max-width:700px) {
-    #card-done-assignments{    
+    #card-done-assignments{
         width: 100%;
         margin-left:0.5%;
     }
 }
 /* @media screen and (max-width:450px) {
-    #card-done-assignments{    
+    #card-done-assignments{
         height: 100%;
     }
 } */
