--- a/resources/css/recives-HW.css
+++ b/resources/css/recives-HW.css
@@ -120,6 +120,7 @@
                 padding-top: 4px;
                 box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
                 position: fixed;
+                z-index: 1;
             }
             .form-control {
                 height: 33px;
