--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -16,7 +16,7 @@
         transition: 0.5s;
         display: flex;
         flex-direction: column;
-        z-index: 2;
+        z-index: 3;
     }
 
     .sidebar ul {
@@ -63,7 +63,7 @@
         box-shadow: 0px 0px 5px 0px rgb(72, 72, 72);
         margin-top: -50px;
         position: fixed;
-        z-index: 1;
+        z-index: 2;
     }
 
     .content {
@@ -80,6 +80,10 @@
         bottom: 200px;
         height: 100%;
         padding-bottom: 30px;
+        scrollbar-width: none;
+        scrollbar-height: none;
+        -ms-overflow-style: none;
+        overflow:auto;
     }
     /* @media screen and (max-width: 300px) {
     .sidebar {
