--- a/resources/css/managedrpart.css
+++ b/resources/css/managedrpart.css
@@ -893,7 +893,7 @@
             .btn.departmentNavbar_dropdown {
                 font-size: 11px;
                 font-weight: normal;
-                left: 42%;
+                left: 50%;
                 margin-top: 12px;
                 display:flex;
                 box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
@@ -906,11 +906,11 @@
 
         }
 
-        @media screen and (max-width: 450px) {
+        /* @media screen and (max-width: 450px) {
             .btn.departmentNavbar_dropdown {
                 left: 54%;
             }
-        }
+        } */
         @media screen and (max-width: 350px) {
             .btn.departmentNavbar_dropdown {
                 font-size: 10px;
