--- a/resources/css/mainAdmin.css
+++ b/resources/css/mainAdmin.css
@@ -89,13 +89,13 @@
 } */
 .btn-group.btn_group_nav_departments {
     margin-left: 36%;
-    margin-top: 51px;
+    margin-top: 15px;
     position: fixed;
 }
 .btn-departments-Navbar  {
     background-color: white;
     color: #0E70F2;
-    top: -36px;
+    /* top: -36px; */
     text-align: center;
     padding: 8px 9px;
     /* width: 90px; */
@@ -109,7 +109,7 @@
 .btn.btn-departments-Navbar{
     background-color: white;
     color: #0E70F2;
-    top: -36px;
+    /* top: -36px; */
     text-align: center;
     padding: 8px 9px;
     height: 35px;
@@ -303,7 +303,7 @@
 .btn.departmentAcademic_dropdown{
     font-size: 11px;
     font-weight: normal;
-    margin-top: 55px;
+    margin-top: 10px;
     display:flex;
     box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
     position: absolute;
@@ -335,24 +335,26 @@ float: right;
 @media screen and (max-width: 700px) {
     .btn.departmentAcademic_dropdown{
         right:3%;
-        padding-right: 1%;
-        font-size: 10px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .btn.departmentAcademic_dropdown{
+        margin-top: 15px;
     }
 }
 @media screen and (max-width: 500px) {
     .btn.departmentAcademic_dropdown{
-        margin-right:55%;
+        margin-right:40%;
         padding-right: 1%;
         font-size: 10px;
-        margin-top: 13px;
+        top: -45px;
     }
 }
 @media screen and (max-width: 400px) {
     .btn.departmentAcademic_dropdown{
-        margin-right:50%;
+        /* margin-right:50%; */
         padding-right: 1%;
         font-size: 10px;
-        margin-top: 13px;
     }
 }
 .back_academic_mobile{
@@ -360,7 +362,7 @@ float: right;
 }
 @media screen and (max-width: 500px) {
     .back_academic_mobile{
-       display:flex;
+        display:flex;
         width: 50px;
         margin-right:20px;
     }
@@ -373,9 +375,22 @@ float: right;
     box-shadow: 2px rgb(72, 72, 72);
     background-color: #ffffff;
     color: black;
-    position: relative;
-    margin-top: 55px;
+    position: absolute;
+    margin-top: 0px;
+    display: flex;
+    align-items: center;
+
 }
+/* .input-group.input-search-admin input {
+    width: 100%;
+    border: none;
+    outline: none;
+    height: 100%;
+    padding: 0 5px;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    color: black;
+} */
 
 @media screen and (max-width: 1000px) {
     .input-group.input-search-admin {
