--- a/resources/css/students.css
+++ b/resources/css/students.css
@@ -8,7 +8,7 @@
     background-color: white;
     color: #0E70F2;
     top: -50px;
-    text-align: center;
+    text-align: center;btn-group-nav-subjectbooks
     padding: 6px 9px;
     width: 90px;
     height: 35px;
@@ -20,18 +20,18 @@
 } */
 
 #btn-group-students {
-    margin-left: 22%;
-    margin-top: 21px;
+    margin-left: 33%;
+    margin-top: -29px;
     position: fixed;
 }
 
 #btn-studentsNavbar {
     background-color: white;
     color: #0E70F2;
-    top: -50px;
+    /* top: -50px; */
     text-align: center;
     padding: 8px 11px;
-    width: 90px;
+    /* width: 90px; */
     height: 35px;
     font-size: 11px;
     border: none;
@@ -47,64 +47,64 @@
 
 @media screen and (max-width: 1180px) {
     #btn-group-students {
-        margin-left: 18%;
+        margin-left: 30%;
     }
 }
 @media screen and (max-width: 1100px) {
     #btn-group-students {
-        margin-left: 15%;
+        margin-left: 28%;
     }
 }
 
 @media screen and (max-width: 992px) {
     #btn-group-students {
-        margin-left: 16%;
+        margin-left: 26%;
     }
-    #btn-studentsNavbar {
+    /* #btn-studentsNavbar {
         padding: 5px 8px;
         width: 80px;
         height: 30px;
         font-size: 10px;
         top: -45px;
-    }
+    } */
 }
 @media screen and (max-width: 970px) {
     #btn-group-students {
-        margin-left: 15%;
+        margin-left: 25%;
     }
 }
 @media screen and (max-width: 950px) {
     #btn-group-students {
-        margin-left: 14%;
+        margin-left: 24%;
     }
 }
 
 @media screen and (max-width: 930px) {
     #btn-group-students {
-        margin-left: 13%;
+        margin-left: 21%;
     }
 }
 @media screen and (max-width: 900px) {
     #btn-group-students {
-        margin-left: 11.5%;
+        margin-left: 19%;
     }
 }
 
 @media screen and (max-width: 875px) {
     #btn-group-students {
-        margin-left: 12%;
+        margin-left: 18%;
     }
-    #btn-studentsNavbar {
+    /* #btn-studentsNavbar {
         padding: 5px 8px;
         width: 70px;
         height: 30px;
         font-size: 9px;
         top: -45px;
-    }
+    } */
 }
 @media (max-width: 820px) {
     #btn-group-students {
-        margin-left: 11%;
+        margin-left: 17%;
     }
 }
 @media (max-width: 799px) {
@@ -171,19 +171,19 @@
             margin-left: 40%;
         }
     }
-    
+
     @media screen and (max-width:768px) {
         #btn-navbar-hw {
             margin-left: 40%;
         }
     }
-    
+
     @media screen and (max-width:700px) {
         #btn-navbar-hw {
             margin-left: 61%;
         }
     }
-    
+
     @media screen and (max-width:550px) {
         #btn-navbar-hw {
             margin-left: 62%;
@@ -229,7 +229,7 @@
 */
 
 
-/*     
+/*
     #btn-groups-hw {
         font-size: 12px;
         font-weight: normal;
@@ -239,25 +239,25 @@
         position: fixed;
         box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
     }
-    
+
     @media screen and (max-width:991px) {
         #btn-groups-hw {
             margin-left: 30px;
         }
     }
-    
+
     @media screen and (max-width:891px) {
         #btn-groups-hw {
             margin-left: 20px;
         }
     }
-    
+
     @media screen and (max-width:850px) {
         #btn-groups-hw {
             margin-left: 100px;
         }
     }
-    
+
     @media screen and (max-width:777px) {
         #btn-groups-hw {
             width: 100px;
@@ -773,7 +773,7 @@
 }
 @media screen and (max-width: 290px) {
     #btn-studentsdropdown {
-        width: 60px;  
+        width: 60px;
         margin-left: 55.5%;
       }
 }
