uploade management of Sechedules pages

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,6 +16,7 @@
 @import './quality.css';
 @import "./students_affairs.css";
 @import "./chatbox.css";
+@import './sechedules.css';
 /* @import "bootstrap/dist/css/bootstrap.min.css"; */
 @import "./sidebar.css";
 @import "./project.css";
