--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,6 +17,7 @@
 @import "./students_affairs.css";
 @import "./chatbox.css";
 @import './sechedules.css';
+@import './login.css';
 /* @import "bootstrap/dist/css/bootstrap.min.css"; */
 @import "./sidebar.css";
 @import "./project.css";
