--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -153,7 +153,7 @@
     border-radius: 50px;
     padding-left: 20px;
     font-size: 15px;
-    color: #fff;
+    background-color: white;
     shadow: 0px 0px 10px #0000ff;
 }
 @media screen and (max-width: 500px) {
