--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -98,7 +98,8 @@
     opacity: none;
     /* margin-left:60%; */
     margin-right: -300px;
-    height: 250px;
+    min-height: 40%;
+    /* height: 100%; */
     /* margin-top:-40px; */
 }
 @media screen and (max-width: 991px) {
@@ -149,6 +150,7 @@
     .login-form {
         /* min-width: 60% !important; */
         width: 93%;
+        margin-top: -50px !important;
         /* margin-left: -40px; */
         /* margin-right: -35px !important; */
     }
